--- a/styles.kuttu.css
+++ b/styles.kuttu.css
@@ -88,7 +88,7 @@ body {
 /* Desktop and Tablet Styles */
 @media screen and (min-width: 768px) {
   body {
-    background-image: url('images/website_bg.jpg');
+    background-image: url('website_bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -143,7 +143,7 @@ body {
 /* Mobile Styles */
 @media screen and (max-width: 767px) {
   body {
-    background-image: url('images/website_bg.jpg');
+    background-image: url('website_bg.jpg');
     background-size: cover; /* Cover the entire viewport */
     background-position: center center; /* Center the background */
     background-repeat: no-repeat;
